Reintroduce CleanerUtils, and use it in MappedFile
This removes one of several roadblocks to simultaneous compatibility with
both Java 8 and Java 11. It's not clear whether the other roadblocks can be
removed, but this change makes it easier to experiment.